website in react

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "arun_portfolio-react",
+  "homepage": "https://arunaaryan.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
